# OrpheusEcho

./: AGENTS.md  README.md
services/api/: orpheus_echo_fallback.db  pyproject.toml
services/api/app/: main.py
services/api/app/api/: deps.py  router.py
services/api/app/core/: config.py  database.py  responses.py
services/api/app/domain/: country_rules.py  joke_guardrails.py  phonetic_rules.py
services/api/app/models/: db_models.py  entities.py
services/api/app/repositories/: country_dictionary_repository.py  db_repositories.py  in_memory.py  joke_repository.py  known_animal_repository.py  model_repository.py  training_repository.py  tts_repository.py
services/api/app/schemas/: candidate.py  common.py  country_dictionary.py  joke_schemas.py  known_animal.py  model.py  session.py  training.py  trial.py
services/api/app/services/: candidate_service.py  country_dictionary_service.py  joke_service.py  known_animal_service.py  model_service.py  ranking_service.py  result_service.py  session_service.py  training_service.py  trial_service.py  tts_service.py
services/api/app/utils/: ids.py
services/api/exports/: model_v1.0.0.json  model_v1.1.22.json  model_v1.1.268.json  model_v1.1.275.json  model_v1.1.31.json  model_v1.1.353.json  model_v1.1.40.json  model_v1.1.41.json  model_v1.1.780.json  model_v1.1.840.json  model_v1.1.877.json  model_v1.1.917.json  model_v1.1.965.json  model_v1.1.972.json  model_v1.1.985.json  model_v1.1.995.json
services/api/orpheus_echo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/scripts/: seed_joke_profiles.py
(+638 files in other folders)
