[project]
name = "orpheus-echo-backend"
version = "0.1.0"
description = "MVP FastAPI backend for lost pet name candidate exploration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]
